--- a/http/pom.xml
+++ b/http/pom.xml
@@ -4,12 +4,12 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-		<groupId>com.gigs2go.wot</groupId>
-		<artifactId>wot-parent</artifactId>
+		<groupId>com.gigs2go.pinmesh</groupId>
+		<artifactId>pinmesh-parent</artifactId>
 		<version>1.0.0-SNAPSHOT</version>
 		<relativePath>..</relativePath>
 	</parent>
-	<artifactId>wot-http</artifactId>
+	<artifactId>pinmesh-http</artifactId>
 	<packaging>jar</packaging>
 	<name>Http to MQTT adapter</name>
 	<description>Provides a service mapping from HTTP to MQTT</description>
@@ -21,12 +21,12 @@
             <artifactId>nanohttpd</artifactId>
         </dependency>
 		<dependency>
-			<groupId>com.gigs2go.wot</groupId>
-			<artifactId>wot-framework</artifactId>
-		</dependency>
-		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-databind</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.gigs2go.pinmesh</groupId>
+			<artifactId>pinmesh-mqtt</artifactId>
 		</dependency>
 	</dependencies>
 
@@ -45,7 +45,7 @@
 							<archive>
 								<manifest>
 									<mainClass>
-										com.gigs2go.framework.http.HttpAdapter
+										com.gigs2go.pinmesh.http.HttpAdapter
 									</mainClass>
 								</manifest>
 							</archive>
